--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
         </span>
       </section>
       <footer>
-        <b><u>MiniPryecto1 / M. Lehim Vergara L. / FUNVAL 2023</u></b> - devChallenges.io
+        <b><u>MiniProyecto1 / M. Lehim Vergara L. / FUNVAL 2023</u></b> - devChallenges.io
       </footer>
     </main>
   </body>
